# histos

./: .gitignore  AGENTS.md  CLAUDE.md  DEVLOG.md  README.md  SKILL.md  llms.txt  todo
decoder/: Cargo.toml
decoder/src/: lib.rs
htmlpack/: .gitignore  CRATES-IO.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  example-config.yaml
htmlpack/core/: core.js  wasm_decoder.js  wasm_decoder_bg.wasm
htmlpack/src/: config.rs  encoder.rs  error.rs  fetcher.rs  html.rs  lib.rs  packer.rs  render.rs  wasmbuilder.rs
htmlpack/src_cpy/: cli.rs  config.rs  encoder.rs  fetcher.rs  html.rs  lib.rs  packer.rs  render.rs  wasmbuilder.rs
htmlpack/tests/: errors.rs
