[package]
name = "histos_decoder"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
base64 = "0.22.1"
brotli = "7.0.0"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
#base94 = "0.3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--optimize-level=4", "--shrink-level=2", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
#wasm-opt = ["-O1"]
#wasm-opt = false
#wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-mutable-globals"]
#wasm-opt = ["--optimize-level=4", "--shrink-level=2", "--enable-bulk-memory"]
#lto = true
