[package]
name = "histos"
version = "0.0.1"
edition = "2021"
description = "A tool to weave web assets into a single, atomic HTML file."
license = "MIT OR Apache-2.0"
readme = "CRATES-IO.md"
keywords = ["html", "pack", "binary", "wasm", "webassembly"]
categories = ["command-line-utilities", "web-programming"]
include = [
    "src/**/*",
    "core/**/*",
    "Cargo.toml",
    "CRATES-IO.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]
repository = "https://github.com/chetgdp/histos"
documentation = "https://docs.rs/histos"
homepage = "https://chetgdp.github.io"

[lib]
name = "histos"
path = "src/lib.rs"

[[bin]]
name = "histos"
path = "src/bin/main.rs"

[dependencies]
base64 = "0.22.1"
brotli = "8.0.2"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3.31"
maud = "0.27.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10.9"
thiserror = "2.0.18"
#hex = "0.4.3"
tokio = { version = "1.28", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }
#base94 = "0.3.0"

[dev-dependencies]
mockito = "1"
tempfile = "3"
url = "2.5"

[profile.release]
opt-level = 3

